removed overflow: hidden for -img-card. fixed inside img tag

--- a/style.css
+++ b/style.css
@@ -198,7 +198,6 @@ input {
 	object-fit: cover;
 	aspect-ratio: 1;
     }
-    overflow: hidden;
 }
 
 .comment {
